--- a/UniDiamond/test-output/old/Default suite/classes.html
+++ b/UniDiamond/test-output/old/Default suite/classes.html
@@ -4,37 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.CriticalSheetTest</td>
+<td>tests.PriceTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUniDiscountShouldNotShowAfterAddTheQC</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyUserIsNotAbleToPlaceBidOfferForTheQcStone</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyAddingMultipleStoneUsingQuickSearch</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>VerifyPriceOnAllMediaIconsForEveryPage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyThePricesWithMarkupForRetailerUser</td>
+<td>verifyTheFinalTotalPrice</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>getDBData</td>
+<td>getStoneIdsFromDb</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getStoneTotalPrice</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
