--- a/UniDiamond/test-output/old/Suite/classes.html
+++ b/UniDiamond/test-output/old/Suite/classes.html
@@ -4,38 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.CriticalSheetTest</td>
+<td>tests.PurchaseWorkflowForLabGrownStoneTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUniDiscountShouldNotShowAfterAddTheQC</td>
+<td>verifyUserCanPlaceOrderUsingBuyWithMultipleLabGrownStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserIsNotAbleToPlaceBidOfferForTheQcStone</td>
+<td>verifyUserCanPlaceOfferUsingMemoWithMultipleLabGrownStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddingMultipleStoneUsingQuickSearch</td>
+<td>verifyUserCanPlaceOfferUsingMemoForLabGrownStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyPriceOnAllMediaIconsForEveryPage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyThePricesWithMarkupForRetailerUser</td>
+<td>verifyUserCanPlaceOrderUsingBuyForLabGrownStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>getDBData</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
