Added the new class StoneDetailsPage

--- a/UniDiamond/test-output/index.html
+++ b/UniDiamond/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.PriceTest" class="method navigator-link" hash-for-method="verifyTheFinalTotalPrice">verifyTheFinalTotalPrice</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.PurchaseWorkflowForNaturalStoneTest" class="method navigator-link" hash-for-method="verifyUserCanPlaceMemoOfferFromStoneDetails">verifyUserCanPlaceMemoOfferFromStoneDetails</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.PriceTest</span>
+              <span class="class-name">tests.PurchaseWorkflowForNaturalStoneTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyTheFinalTotalPrice">
-                  </a> <!-- verifyTheFinalTotalPrice -->
-                  <span class="method-name">verifyTheFinalTotalPrice</span>
+                  <a name="verifyUserCanPlaceMemoOfferFromStoneDetails">
+                  </a> <!-- verifyUserCanPlaceMemoOfferFromStoneDetails -->
+                  <span class="method-name">verifyUserCanPlaceMemoOfferFromStoneDetails</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--379499227/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--1050371151/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.PriceTest&quot;/&gt;
+      &lt;class name=&quot;tests.PurchaseWorkflowForNaturalStoneTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyTheFinalTotalPrice')
-data.setCell(0, 2, 'tests.PriceTest')
-data.setCell(0, 3, 34248);
+data.setCell(0, 1, 'verifyUserCanPlaceMemoOfferFromStoneDetails')
+data.setCell(0, 2, 'tests.PurchaseWorkflowForNaturalStoneTest')
+data.setCell(0, 3, 103211);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 34 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -208,9 +208,26 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">6 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">tests.PurchaseWorkflowForNaturalStoneTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyUserCanPlaceOrderUsingBuyForNaturalStone</span>
+                <br/>
+                <span class="ignored-method-name">verifyUserCanPlaceOfferUsingBidForNaturalStone</span>
+                <br/>
+                <span class="ignored-method-name">verifyUserCanPlaceOfferUsingMemoWithMultipleNaturalStones</span>
+                <br/>
+                <span class="ignored-method-name">verifyUserCanPlaceOrderUsingBuyWithMultipleNaturalStones</span>
+                <br/>
+                <span class="ignored-method-name">verifyUserCanPlaceOfferUsingMemoForNaturalStone</span>
+                <br/>
+                <span class="ignored-method-name">verifyUserCanPlaceOfferUsingBidWithMultipleNaturalStones</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -219,26 +236,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.PriceTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">getStoneIdsFromDb</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-class before">
-                <span class="method-name">getStoneTotalPrice</span>
-                <span class="method-start">5282 ms</span>
-              </div> <!-- configuration-class before -->
+              <div class="chronological-class-name">tests.PurchaseWorkflowForNaturalStoneTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">7796 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyTheFinalTotalPrice</span>
-                <span class="method-start">9368 ms</span>
+                <span class="method-name">verifyUserCanPlaceMemoOfferFromStoneDetails</span>
+                <span class="method-start">1628 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">43618 ms</span>
+                <span class="method-start">104890 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
