--- a/UniDiamond/test-output/old/Default suite/classes.html
+++ b/UniDiamond/test-output/old/Default suite/classes.html
@@ -4,26 +4,42 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.PriceTest</td>
+<td>tests.PurchaseWorkflowForNaturalStoneTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTheFinalTotalPrice</td>
+<td>verifyUserCanPlaceOrderUsingBuyWithMultipleNaturalStones</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanPlaceOfferUsingMemoWithMultipleNaturalStones</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanPlaceOrderUsingBuyForNaturalStone</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanPlaceOfferUsingBidForNaturalStone</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanPlaceMemoOfferFromStoneDetails</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanPlaceOfferUsingBidWithMultipleNaturalStones</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUserCanPlaceOfferUsingMemoForNaturalStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>getStoneIdsFromDb</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>getStoneTotalPrice</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
