--- a/UniDiamond/test-output/old/Suite/classes.html
+++ b/UniDiamond/test-output/old/Suite/classes.html
@@ -4,30 +4,46 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.PurchaseWorkflowForLabGrownStoneTest</td>
+<td>tests.WednesdaySheetTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserCanPlaceOrderUsingBuyWithMultipleLabGrownStone</td>
+<td>verifyCreateBidOfferWithSingleStoneAndRejectFromSeller</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserCanPlaceOfferUsingMemoWithMultipleLabGrownStone</td>
+<td>VerifyAddQcAndCreateOrderWithQCAndNonQCStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserCanPlaceOfferUsingMemoForLabGrownStone</td>
+<td>verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyUserCanPlaceOrderUsingBuyForLabGrownStone</td>
+<td>verifyCreateBidOfferWithSingleStoneAndAcceptFromSeller</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyBuyTheMemoStone</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyReturnTheMemoStone</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>getDBData</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
