--- a/UniDiamond/test-output/old/Default suite/methods.html
+++ b/UniDiamond/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9175d8">  <td>25/10/08 16:42:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PriceTest.getStoneIdsFromDb()[pri:0, instance:tests.PriceTest@6cb107fd]">&gt;&gt;getStoneIdsFromDb</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9175d8">  <td>25/10/08 16:43:01</td>   <td>5278</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PriceTest.getStoneTotalPrice()[pri:0, instance:tests.PriceTest@6cb107fd]">&gt;&gt;getStoneTotalPrice</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="e8c3cb">  <td>25/10/08 16:43:04</td>   <td>7792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PriceTest@6cb107fd]">&gt;&gt;setup</td> 
+<tr bgcolor="e8c3cb">  <td>25/12/04 11:30:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PurchaseWorkflowForNaturalStoneTest@2ab4bc72]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9175d8">  <td>25/10/08 16:43:05</td>   <td>9364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriceTest.verifyTheFinalTotalPrice()[pri:1, instance:tests.PriceTest@6cb107fd]">verifyTheFinalTotalPrice</td> 
+<tr bgcolor="9175d8">  <td>25/12/04 11:30:50</td>   <td>1627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchaseWorkflowForNaturalStoneTest.verifyUserCanPlaceMemoOfferFromStoneDetails()[pri:6, instance:tests.PurchaseWorkflowForNaturalStoneTest@2ab4bc72]">verifyUserCanPlaceMemoOfferFromStoneDetails</td> 
   <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="e8c3cb">  <td>25/10/08 16:43:40</td>   <td>43614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PriceTest@6cb107fd]">&lt;&lt;tearDown</td> 
+<tr bgcolor="e8c3cb">  <td>25/12/04 11:32:33</td>   <td>104889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PurchaseWorkflowForNaturalStoneTest@2ab4bc72]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
 </table>
