--- a/UniDiamond/test-output/old/Suite/methods-not-run.html
+++ b/UniDiamond/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,7 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>tests.WednesdaySheetTest.verifyReturnTheMemoStone</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyCreateBidOfferWithSingleStoneAndAcceptFromSeller</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyBuyTheMemoStone</td></tr>
+<tr><td>tests.WednesdaySheetTest.verifyCreateBidOfferWithSingleStoneAndRejectFromSeller</td></tr>
+<tr><td>tests.WednesdaySheetTest.VerifyAddQcAndCreateOrderWithQCAndNonQCStone</td></tr>
 </table>
