--- a/UniDiamond/test-output/old/Suite/methods.html
+++ b/UniDiamond/test-output/old/Suite/methods.html
@@ -1,28 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:55:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&gt;&gt;setup</td> 
+<tr bgcolor="bbb094">  <td>25/12/03 11:36:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WednesdaySheetTest.getDBData()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&gt;&gt;getDBData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
+<tr bgcolor="9295b0">  <td>25/12/03 11:37:07</td>   <td>9591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/10/07 12:55:11</td>   <td>1273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchaseWorkflowForLabGrownStoneTest.verifyUserCanPlaceOrderUsingBuyForLabGrownStone()[pri:1, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">verifyUserCanPlaceOrderUsingBuyForLabGrownStone</td> 
+<tr bgcolor="bbb094">  <td>25/12/03 11:37:11</td>   <td>14163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WednesdaySheetTest.verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller()[pri:1, instance:tests.WednesdaySheetTest@7bd7d6d6]">verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller</td> 
   <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:56:11</td>   <td>61320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9295b0">  <td>25/12/03 11:38:19</td>   <td>82164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:56:12</td>   <td>61506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&gt;&gt;setup</td> 
+<tr bgcolor="9295b0">  <td>25/12/03 11:38:19</td>   <td>82297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/10/07 12:56:12</td>   <td>61830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchaseWorkflowForLabGrownStoneTest.verifyUserCanPlaceOfferUsingMemoForLabGrownStone()[pri:2, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">verifyUserCanPlaceOfferUsingMemoForLabGrownStone</td> 
+<tr bgcolor="bbb094">  <td>25/12/03 11:38:20</td>   <td>83186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WednesdaySheetTest.verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller()[pri:2, instance:tests.WednesdaySheetTest@7bd7d6d6]">verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller</td> 
   <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:57:13</td>   <td>122838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:57:13</td>   <td>123016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/10/07 12:57:14</td>   <td>124369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchaseWorkflowForLabGrownStoneTest.verifyUserCanPlaceOrderUsingBuyWithMultipleLabGrownStone()[pri:3, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">verifyUserCanPlaceOrderUsingBuyWithMultipleLabGrownStone</td> 
-  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:58:16</td>   <td>186343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:58:17</td>   <td>186574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/10/07 12:58:18</td>   <td>187482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchaseWorkflowForLabGrownStoneTest.verifyUserCanPlaceOfferUsingMemoWithMultipleLabGrownStone()[pri:4, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">verifyUserCanPlaceOfferUsingMemoWithMultipleLabGrownStone</td> 
-  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/10/07 12:59:19</td>   <td>248497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PurchaseWorkflowForLabGrownStoneTest@3de8f619]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9295b0">  <td>25/12/03 11:39:36</td>   <td>159114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
 </table>
