--- a/UniDiamond/test-output/old/Default suite/methods.html
+++ b/UniDiamond/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8c3cb">  <td>25/12/04 11:30:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PurchaseWorkflowForNaturalStoneTest@2ab4bc72]">&gt;&gt;setup</td> 
+<tr bgcolor="bbb094">  <td>25/12/23 13:15:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PriceTest.getStoneIdsFromDb()[pri:0, instance:tests.PriceTest@3de8f619]">&gt;&gt;getStoneIdsFromDb</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
+<tr bgcolor="9295b0">  <td>25/12/23 13:15:13</td>   <td>3517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.PriceTest@3de8f619]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9175d8">  <td>25/12/04 11:30:50</td>   <td>1627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PurchaseWorkflowForNaturalStoneTest.verifyUserCanPlaceMemoOfferFromStoneDetails()[pri:6, instance:tests.PurchaseWorkflowForNaturalStoneTest@2ab4bc72]">verifyUserCanPlaceMemoOfferFromStoneDetails</td> 
+<tr bgcolor="bbb094">  <td>25/12/23 13:15:15</td>   <td>5324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PriceTest.verifyThePriceForRegularStoneInvoiceOnlyOnCheckout()[pri:1, instance:tests.PriceTest@3de8f619]">verifyThePriceForRegularStoneInvoiceOnlyOnCheckout</td> 
   <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="e8c3cb">  <td>25/12/04 11:32:33</td>   <td>104889</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PurchaseWorkflowForNaturalStoneTest@2ab4bc72]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9295b0">  <td>25/12/23 13:15:49</td>   <td>38748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.PriceTest@3de8f619]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
 </table>
