Added new test case regarding subscription price

--- a/UniDiamond/test-output/old/Default suite/methods-not-run.html
+++ b/UniDiamond/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>tests.PriceTest.verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithoutUniMarkup<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>uniMarkup no, Credit cost yes, D mergin yes, Regular Stone Invoice Only On Checkout</i></td></tr>
 </table>
