--- a/UniDiamond/test-output/index.html
+++ b/UniDiamond/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="tests.PriceTest" class="method navigator-link" hash-for-method="verifyThePriceForRegularStoneInvoiceOnlyOnCheckout">verifyThePriceForRegularStoneInvoiceOnlyOnCheckout</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="tests.PriceTest" class="method navigator-link" hash-for-method="verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup">verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,11 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyThePriceForRegularStoneInvoiceOnlyOnCheckout">
-                  </a> <!-- verifyThePriceForRegularStoneInvoiceOnlyOnCheckout -->
-                  <span class="method-name">verifyThePriceForRegularStoneInvoiceOnlyOnCheckout</span>
+                  <a name="verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup">
+                  </a> <!-- verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup -->
+                  <span class="method-name">verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup</span>
+                  <em>
+(uniMarkup yes, Credit cost yes, D mergin yes, Regular Stone Invoice Only On Checkout)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/tmp/testng-eclipse--479691255/testng-customsuite.xml</span>
+            <span class="header-content">/tmp/testng-eclipse--98211673/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyThePriceForRegularStoneInvoiceOnlyOnCheckout')
+data.setCell(0, 1, 'verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup')
 data.setCell(0, 2, 'tests.PriceTest')
-data.setCell(0, 3, 33422);
+data.setCell(0, 3, 38322);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 33 seconds</span>
+              <span class="suite-total-time">Total running time: 38 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -208,9 +210,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">tests.PriceTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithoutUniMarkup</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -220,21 +229,21 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">tests.PriceTest</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">getStoneIdsFromDb</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">3522 ms</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">getStoneIdsFromDb</span>
+                <span class="method-start">1705 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyThePriceForRegularStoneInvoiceOnlyOnCheckout</span>
-                <span class="method-start">5329 ms</span>
+                <span class="method-name">verifyThePriceForRegularStoneInvoiceOnlyOnCheckoutWithUniMarkup</span>
+                <span class="method-start">7336 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">38753 ms</span>
+                <span class="method-start">45660 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
