--- a/UniDiamond/test-output/old/Suite/classes.html
+++ b/UniDiamond/test-output/old/Suite/classes.html
@@ -4,38 +4,30 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.WednesdaySheetTest</td>
+<td>tests.CriticalSheetTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCreateBidOfferWithSingleStoneAndRejectFromSeller</td>
+<td>verifyUniDiscountShouldNotShowAfterAddTheQC</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyAddQcAndCreateOrderWithQCAndNonQCStone</td>
+<td>verifyUserIsNotAbleToPlaceBidOfferForTheQcStone</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller</td>
+<td>verifyAddingMultipleStoneUsingQuickSearch</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCreateBidOfferWithSingleStoneAndAcceptFromSeller</td>
+<td>VerifyPriceOnAllMediaIconsForEveryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyBuyTheMemoStone</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyReturnTheMemoStone</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller</td>
+<td>verifyThePricesWithMarkupForRetailerUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
