--- a/UniDiamond/test-output/old/Suite/methods.html
+++ b/UniDiamond/test-output/old/Suite/methods.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbb094">  <td>25/12/18 12:15:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WednesdaySheetTest.getDBData()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&gt;&gt;getDBData</td> 
+<tr bgcolor="ae8e6e">  <td>25/12/23 15:43:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CriticalSheetTest.getDBData()[pri:0, instance:tests.CriticalSheetTest@7bd7d6d6]">&gt;&gt;getDBData</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/12/18 12:16:01</td>   <td>5710</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&gt;&gt;setup</td> 
+<tr bgcolor="71b9c0">  <td>25/12/23 15:43:11</td>   <td>4410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.CriticalSheetTest@7bd7d6d6]">&gt;&gt;setup</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/12/18 12:16:03</td>   <td>7181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WednesdaySheetTest.verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller()[pri:1, instance:tests.WednesdaySheetTest@7bd7d6d6]">verifyCreateMemoOfferWithSingleStoneAndAcceptFromSeller</td> 
+<tr bgcolor="ae8e6e">  <td>25/12/23 15:43:12</td>   <td>6063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CriticalSheetTest.verifyUserIsNotAbleToPlaceBidOfferForTheQcStone()[pri:4, instance:tests.CriticalSheetTest@7bd7d6d6]">verifyUserIsNotAbleToPlaceBidOfferForTheQcStone</td> 
   <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/12/18 12:18:22</td>   <td>146274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/12/18 12:18:22</td>   <td>146422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="bbb094">  <td>25/12/18 12:18:23</td>   <td>147172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WednesdaySheetTest.verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller()[pri:2, instance:tests.WednesdaySheetTest@7bd7d6d6]">verifyCreateMemoOfferWithSingleStoneAndRejectFromSeller</td> 
-  <td>main@1943105171</td>   <td></td> </tr>
-<tr bgcolor="9295b0">  <td>25/12/18 12:20:54</td>   <td>298378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.WednesdaySheetTest@7bd7d6d6]">&lt;&lt;tearDown</td> 
+<tr bgcolor="71b9c0">  <td>25/12/23 15:44:21</td>   <td>74861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.CriticalSheetTest@7bd7d6d6]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@1943105171</td>   <td></td> </tr>
 </table>
